# application-operators

./: README.md  application-operators.cabal
Control/: Apply.hs
Control/Apply/: Confusing.hs  Lifting.hs  Pseudosyntactic.hs
